--- a/src/app/view/navbar/navbar.component.html
+++ b/src/app/view/navbar/navbar.component.html
@@ -1,1 +1,9 @@
-<p>navbar works!</p>
+<div class="navbar__container">
+    <div class="navbar__menu">
+        <div>Dashboard</div>
+        <div>User</div>
+    </div>
+    <div>
+        <div>LOGOUT</div>
+    </div>
+</div>
