--- a/src/app/view/userlist/userlist.component.html
+++ b/src/app/view/userlist/userlist.component.html
@@ -1,1 +1,35 @@
-<p>userlist works!</p>
+<div class="userList">
+    <div class="popup" *ngIf="popupmenu" [formGroup] = "registerForm">
+        <div class="text">Update User</div>
+        <select id="user" class="user" formControlName="role">
+            <option value="supervisor">Supervisor</option>
+            <option value="user">User</option>
+            <option value="sales person">Sales Person</option>
+        </select>
+        <div class="checkbox">
+            <input type="checkbox" class="input__checkbox" formControlName="isActive" id="input__checkbox" value="active">
+              <label class="label" for="html">Is Active</label>
+        </div>
+        <button type="button" class="btn btn-primary" (click)="updateUser()">Update</button>
+        <button type="button" class="btn btn-primary" (click)="closepop()">Close</button>
+    </div>
+    <table class="box">
+        <tr class="column">
+            <th class="mr">User Name</th>
+            <th class="mr">Name</th>
+            <th class="mr">Email</th>
+            <th class="mr">Role</th>
+            <th class="mr">Status</th>
+            <th class="mr">Action</th>
+        </tr>
+        <tr class="space" *ngFor="let user of userlist" >
+            <td>{{user.id}}</td>
+            <td>{{user.name}}</td>
+            <td>{{user.email}}</td>
+            <td>{{user.role}}</td>
+            <td>{{user.isActive? 'Active':'Inactive'}}</td>
+            <td> <button type="button" (click)="onUpdate(user)" class="btn btn-primary update">Update</button></td>
+        </tr>
+       
+    </table>
+</div>
