--- a/src/app/view/navbar/navbar.component.html
+++ b/src/app/view/navbar/navbar.component.html
@@ -1,9 +1,10 @@
 <div class="navbar__container">
     <div class="navbar__menu">
-        <div>Dashboard</div>
-        <div>User</div>
+        <div routerLink="/">Dashboard</div>
+        <div routerLink="/user">User</div>
+        <div routerLink="/product">Product</div>
     </div>
     <div>
-        <div>LOGOUT</div>
+        <div class="logout" routerLink="/login">LOGOUT</div>
     </div>
 </div>
