--- a/src/app/view/add-items/add-items.component.html
+++ b/src/app/view/add-items/add-items.component.html
@@ -4,7 +4,7 @@
         <thead class="bg-dark text-white">
             <tr>
                 <td>S.N</td>
-            <td>Product Name</td>
+                <td>Product Name</td>
                 <td>Description</td>
                 <td>Qty</td>
                 <td>Price</td>
@@ -30,20 +30,19 @@
                 </td>
                 <td>
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="quantity" (change)="calculation()"
-                            aria-label="Username" aria-describedby="basic-addon1" type="number"
-                            formControlName="quantity">
+                        <input type="text" class="form-control" placeholder="quantity" aria-label="Username"
+                            aria-describedby="basic-addon1" type="number" formControlName="quantity">
                     </div>
                 </td>
                 <td>
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="price" (change)="calculation()"
-                            aria-label="Username" aria-describedby="basic-addon1" type="number" formControlName="price">
+                        <input type="text" class="form-control" placeholder="price" aria-label="Username"
+                            aria-describedby="basic-addon1" type="number" formControlName="price">
                     </div>
                 </td>
                 <td>
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" type="number" formControlName="total" 
+                        <input type="text" class="form-control" type="number" formControlName="total"
                             placeholder="total" aria-label="Username" aria-describedby="basic-addon1">
                     </div>
                 </td>
