all feature is added

--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -20,8 +20,8 @@
             <td>{{item.invoice}}</td>
             <td>{{item.customerName}}</td>
             <td>{{item.name}}</td>
-            <td>{{item.quantity}}</td>
-            <td>{{item.price}}</td>
+            <td>{{item.numberGroup.quantity}}</td>
+            <td>{{item.numberGroup.price}}</td>
             <td>{{item.total}}</td>
         </tr>
     </table>
