--- a/src/app/view/sell-items/sell-items.component.html
+++ b/src/app/view/sell-items/sell-items.component.html
@@ -1,4 +1,5 @@
 <div class="card" style="width: 80vw;margin:auto" [formGroup]="sellItems">
+    <!-- <div [ngClass]="spinner ? 'loader' : ''"></div> -->
     <h3>List Items</h3>
     <div class="card-header">
         <div class="input-group mb-3">
