--- a/src/app/view/register/register.component.html
+++ b/src/app/view/register/register.component.html
@@ -1,25 +1,32 @@
-<form type="submit" class="form__container container__box" [formGroup]="registerForm" (ngSubmit)="proceedRegistration()">
+<!-- <div [ngClass]="spinner ? 'loader' : ''"></div> -->
+<div class="container__auth">
+
+    <form type="submit" class="form__container container__box" [formGroup]="registerForm"
+    (ngSubmit)="proceedRegistration()">
     <div class="title">User Registration</div>
-        <label class="form__input--label">
-            UserName
-        </label>
-        <input type="text" class="form__input--input" formControlName="id" required placeholder="UserName"/>
-        <label class="form__input--label">
-            Name
-        </label>
-        <input type="text" class="form__input--input" formControlName="name" required placeholder="Name"/>
-        
-        <label for="email" class="form__input--label">
-            Email
-        </label>
-        <input id="email" name="email" type="email" class="form__input--input" formControlName="email" placeholder="Email" required/>
-        <label for="password" class="form__input--label">
-            Password
-        </label>
-        <input id="password" name="password" type="password" class="form__input--input" formControlName="password" placeholder="Password" required/>
-   <!-- <input type="submit" class="btn"/> -->
-    <button   class="form__submit button" type="submit">Submit
+    <label class="form__input--label">
+        UserName
+    </label>
+    <input type="text" class="form__input--input" formControlName="id" required placeholder="UserName" />
+    <label class="form__input--label">
+        Name
+    </label>
+    <input type="text" class="form__input--input" formControlName="name" required placeholder="Name" />
+    
+    <label for="email" class="form__input--label">
+        Email
+    </label>
+    <input id="email" name="email" type="email" class="form__input--input" formControlName="email" placeholder="Email"
+    required />
+    <label for="password" class="form__input--label">
+        Password
+    </label>
+    <input id="password" name="password" type="password" class="form__input--input" formControlName="password"
+    placeholder="Password" required />
+    <!-- <input type="submit" class="btn"/> -->
+    <button class="form__submit button" type="submit">Submit
         <!-- <button routerLink="/login" class="form__submit btn" type="submit">Submit -->
     </button>
     <div>Already have an account <span routerLink="/login" class="text-primary">login</span></div>
 </form>>
+</div>
