all feature up to date

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-navbar *ngIf="isMenuRequired"></app-navbar>
-<app-loader *ngIf="isLoading"></app-loader>
+<!-- <app-loader *ngIf="isLoading"></app-loader> -->
+<app-loader *ngIf="false"></app-loader>
 <router-outlet></router-outlet>
