--- a/src/app/view/userlist/userlist.component.html
+++ b/src/app/view/userlist/userlist.component.html
@@ -24,7 +24,7 @@
         <select id="user" class="user" formControlName="role">
             <option value="supervisor">Supervisor</option>
             <option value="user">User</option>
-            <option value="sales person">Sales Person</option>
+            <option value="salesperson">Sales Person</option>
         </select>
         <div class="checkbox">
             <input type="checkbox" class="input__checkbox" formControlName="isActive" id="input__checkbox"
@@ -35,7 +35,7 @@
         <button type="button" class="btn btn-primary" (click)="closepop()">Close</button>
     </div>
 
-    <table class="table">
+    <table class="table" style="color: white">
         <thead>
             <tr>
                 <th scope="col">User Name</th>
