--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,29 +1,18 @@
-<div class="card" style="width: 80vw;margin:auto">
-    <h3>Sold Items</h3>
-    <!-- <div class="card-header">
-        <a class="btn btn-success" routerLink="/addItems">Add Items</a>
-        <a class="btn btn-danger">Sell Items</a>
-    </div> -->
-    <table datatable class="table table-bordered">
-        <thead class="bg-dark text-white">
+<div class="card card-container">
+    <h3>Items sold</h3>
+    <table datatable class="table" style="color:white">
+        <!-- <thead class="bg-dark text-white"> -->
+        <thead>
             <tr>
-                <td>Invoice No.</td>
-                <td>customer Name</td>
-                <td>Product name</td>
-                <td>quantity</td>
-                <td>Price</td>
-                <td>NetTotal</td>
-                <!-- <td>Action</td> -->
+                <th scope="col">TOTAL</th>
+                <th scope="col">TODAY</th>
+                <th scope="col">POPULAR</th>
             </tr>
         </thead>
-        <!-- <div [ngClass]="spinner ? 'loader' : ''"></div> -->
-        <tr *ngFor="let item of products">
-            <td>{{item.invoice}}</td>
-            <td>{{item.customerName}}</td>
-            <td>{{item.name}}</td>
-            <td>{{item.numberGroup.quantity}}</td>
-            <td>{{item.numberGroup.price}}</td>
-            <td>{{item.total}}</td>
+        <tr>
+            <td class="data">{{ProductSoldCount.total}}</td>
+            <td class="data">{{ProductSoldCount.today}}</td>
+            <td class="data">{{ProductSoldCount.popular}}</td>
         </tr>
     </table>
 </div>
