--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -1,20 +1,20 @@
 <!-- <div [ngClass]="spinner ? 'loader' : ''"></div> -->
 <div class="container__auth">
-    <form type="submit" class="form__container container__box" [formGroup]="loginForm" (ngSubmit)="proceedLogin()">
-        <div class="title">User Registration</div>
+    <form type="submit" [formGroup]="loginForm" (ngSubmit)="proceedLogin()">
+        <div class="title white">User Registration</div>
         <label class="form__input--label">
             UserName
         </label>
-        <input type="text" class="form__input--input" formControlName="username" required placeholder="UserName" />
-        <label for="password" class="form__input--label">
+        <input type="text" class="input-back" formControlName="username" required placeholder="UserName" />
+        <label for="password" class="">
             Password
         </label>
-        <input id="password" name="password" type="password" class="form__input--input" formControlName="password"
+        <input id="password" name="password" type="password" class=" input-back" formControlName="password"
             placeholder="Password" required />
         <!-- <input type="submit" class="btn"/> -->
-        <button class="form__submit button" type="submit">Submit
+        <button class="bg-info button" type="submit">Submit
             <!-- <button routerLink="/login" class="form__submit btn" type="submit">Submit -->
         </button>
-        <div>New User <span routerLink="/register" class="text-primary">Register</span></div>
+        <div style="color:white">New User <span routerLink="/register" class="text-info">Register</span></div>
     </form>
 </div>
