--- a/src/app/view/products/products.component.css
+++ b/src/app/view/products/products.component.css
@@ -1,22 +1,64 @@
-/* .loader {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
+.card-container {
+    width: 100vw;
+    display: flex;
+    margin-top: 10vh;
+    justify-content: center;
+    align-items: center;
 }
 
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
+.card {
+    width: 80%;
+    background-color: transparent;
+    border: 1px solid lightblue;
+    padding: 30px;
+}
 
-    100% {
-        transform: rotate(360deg);
-    }
-} */
+.card>* {
+    color: white;
+}
+
+.card__function {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.card__search {
+    position: absolute;
+    right: 0;
+    top: 10;
+    z-index: 10;
+    margin-right: 50px;
+}
+
+
+.search-box {
+    border: none;
+    outline: none;
+    border-bottom: 2px solid yellowgreen;
+    transition: width 0.5s ease-in-out;
+}
+
+.search-box:focus {
+    width: 120%;
+}
+
+.search-list>* {
+    cursor: pointer;
+    padding: 5px;
+    background-color: white;
+    border-bottom: 1px solid lightgrey;
+}
+
+.search-list>*:hover {
+    transform: scale(1.05);
+    transition: all 0.3s;
+}
+
+.green {
+    background-color: greenyellow;
+}
+
+.red {
+    background-color: red;
+}
