--- a/src/app/view/products/products.component.html
+++ b/src/app/view/products/products.component.html
@@ -1,33 +1,49 @@
-<!-- <div [ngClass]="spinner ? 'loader' : ''"></div> -->
-<div class="card" style="width: 80vw;margin:auto">
-    <h3>List Items</h3>
-    <div class="card-header">
-        <a class="btn btn-success" routerLink="/addItems" (click)="onAdd()">Add Items</a>
-        <a class="btn btn-danger" routerLink="/sellItems" *ngIf="role === 'admin' || 'sales person'">Sell Items</a>
+<div class="card-container">
+    <div class="card">
+        <h3>List Items</h3>
+        <div class=" card-header card__function">
+            <div class="card__items">
+                <a class="btn btn-success" routerLink="/addItems" *ngIf="role === 'admin' || role === 'supervisor'"
+                    (click)="onAdd()">Add Items</a>
+                <a class="btn btn-danger" routerLink="/sellItems"
+                    *ngIf="role === 'admin' || role === 'salesperson'">Sell
+                    Items</a>
+            </div>
+            <div *ngIf="role === 'admin' || role === 'salesperson'" class="card__search">
+                <ng-container [formGroup]="searchItem">
+                    <input type="text" class="search-box input-back" formControlName="productNameInput"
+                        placeholder="search here..." />
+                    <div class="search-list" *ngFor="let name of searchProductName">
+                        <div class="list-item" (click)="searchClick(name)">{{name}}</div>
+                    </div>
+                </ng-container>
+            </div>
+        </div>
+        <table datatable class="table" style="font-size: 1.2rem;">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Item</th>
+                    <th>Description</th>
+                    <th>quantity</th>
+                    <th>Price</th>
+                    <th>NetTotal</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr [ngStyle]="{'background-color': getProductBackgroundColor(item)}" *ngFor="let item of products">
+                    <td>{{item.id}}</td>
+                    <td>{{item.name}}</td>
+                    <td>{{item.description}}</td>
+                    <td>{{item.numberGroup.quantity}}</td>
+                    <td>{{item.numberGroup.price}}</td>
+                    <td>{{item.total}}</td>
+                    <td><button class="btn btn-primary" routerLink="/addItems"
+                            (click)="onEdit(item)">Edit</button><button class="btn btn-danger"
+                            (click)="onDelete(item)">Delete</button></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    <table datatable class="table table-bordered">
-        <thead class="bg-dark text-white">
-            <tr>
-                <td>ID</td>
-                <td>Item</td>
-                <td>Description</td>
-                <td>quantity</td>
-                <td>Price</td>
-                <td>NetTotal</td>
-                <td>Action</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of products">
-                <td>{{item.id}}</td>
-                <td>{{item.name}}</td>
-                <td>{{item.description}}</td>
-                <td>{{item.numberGroup.quantity}}</td>
-                <td>{{item.numberGroup.price}}</td>
-                <td>{{item.total}}</td>
-                <td><button class="btn btn-primary" routerLink="/addItems" (click)="onEdit(item)">Edit</button><button
-                        class="btn btn-danger" (click)="onDelete(item)">Delete</button></td>
-            </tr>
-        </tbody>
-    </table>
 </div>
