--- a/src/styles.css
+++ b/src/styles.css
@@ -12,32 +12,9 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-/* .loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #3498db;
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  z-index: 10;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-} */
-
 body {
-  background-image: url(../src/assets/black2.jpg);
+  background-image:linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.80)), url(../src/assets/cat.jpg);
+  background-size: cover;
 }
 
 .container__auth {
@@ -90,7 +67,6 @@ input {
   margin: 5px;
   padding: 3px 7px;
   font-size: 17px;
-  /* border:none; */
 }
 
 input:active {
