button floated to right

--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -12,7 +12,7 @@
         <input id="password" name="password" type="password" class=" input-back" formControlName="password"
             placeholder="Password" required />
         <!-- <input type="submit" class="btn"/> -->
-        <button class="bg-info button" type="submit">Submit
+        <button class="bg-dark button" type="submit">Submit
             <!-- <button routerLink="/login" class="form__submit btn" type="submit">Submit -->
         </button>
         <div style="color:white">New User <span routerLink="/register" class="text-info">Register</span></div>
