--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,6 @@ body {
 
 .container__box {
   max-width: 500px;
-  /* margin: 30px auto; */
   overflow: auto;
   min-height: 300px;
   border: 1px solid steelblue;
@@ -46,6 +45,7 @@ body {
   text-decoration: none;
   font-size: 15px;
   font-family: inherit;
+  float:right;
 }
 
 .button:focus {
@@ -92,13 +92,13 @@ input:focus {
 .input-back {
   background-color: transparent;
   outline: none;
-  border-bottom: 1px solid rgb(204, 198, 196);
+  border-bottom: 1px solid rgb(147, 147, 147);
   margin-top: 10px
 }
 
 .input-back:focus {
   outline: none;
-  border-bottom: 1px solid green;
+  border-bottom: 1px solid rgb(255, 255, 255);
 }
 
 button {
