--- a/src/app/view/userlist/userlist.component.html
+++ b/src/app/view/userlist/userlist.component.html
@@ -46,7 +46,6 @@
             </tr>
         </thead>
         <tbody>
-            <!-- <div [ngClass]="spinner ? 'loader' : ''"></div> -->
             <tr class="space" *ngFor="let user of userlist">
                 <td>{{user.id}}</td>
                 <td>{{user.name}}</td>
@@ -54,7 +53,7 @@
                 <td>{{user.role}}</td>
                 <td>{{user.isActive? 'Active':'Inactive'}}</td>
                 <td *ngIf="user.role!=='admin'"> <button type="button" (click)="onUpdate(user)"
-                        class="btn btn-primary update">Update</button><button type="button" (click)="onDelete(user)"
+                        class="btn btn-secondary update">Update</button><button type="button" (click)="onDelete(user)"
                         class="btn btn-danger">Delete</button></td>
             </tr>
         </tbody>
