--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-navbar *ngIf="isMenuRequired"></app-navbar>
-<app-loader *ngIf="isLoading"></app-loader>
+<app-loader *ngIf="loader.loading"></app-loader>
 <router-outlet></router-outlet>
