--- a/src/app/view/register/register.component.html
+++ b/src/app/view/register/register.component.html
@@ -1,4 +1,3 @@
-<!-- <div [ngClass]="spinner ? 'loader' : ''"></div> -->
 <div class="container__auth">
 
     <form type="submit" class="form__container container__box" [formGroup]="registerForm"
@@ -23,10 +22,9 @@
         </label>
         <input id="password" name="password" type="password" class="input-back" formControlName="password"
             placeholder="Password" required />
-        <!-- <input type="submit" class="btn"/> -->
-        <button class="bg-dark button" type="submit">Submit
-            <!-- <button routerLink="/login" class="form__submit btn" type="submit">Submit -->
-        </button>
+        <button class="bg-dark button"
+                [disabled]="registerForm.invalid"
+                type="submit">Submit</button>
         <div>Already have an account <span routerLink="/login" class="text-primary">login</span></div>
     </form>>
 </div>
